--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "homepage": "https://github.com/coopermaruyama/tableau-react#readme",
   "peerDependencies": {
     "prop-types": "^15.6.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
     "es6-promise": "^4.2.8",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.6.0",
     "shallowequal": "^0.2.2",
     "url": "^0.11.0"
   },
@@ -49,14 +49,13 @@
     "babel-register": "^6.16.3",
     "chai": "^3.5.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-adapter-react-17-updated": "^1.0.2",
     "esbuild": "^0.14.30",
     "jsdom": "^15.2.1",
     "live-server": "^1.2.1",
     "mocha": "^5.2.0",
-    "react": "^16.12.0",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "rimraf": "^2.7.1",
     "sinon": "^1.17.6"
   }
